--- a/src/styles/home/_home.scss
+++ b/src/styles/home/_home.scss
@@ -25,6 +25,7 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem 0;
+            cursor: pointer;
 
             .programming-language{
                 font-size: 1.3rem;
