--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,6 +57,64 @@ body{
     }
 }
 
+.search-input{
+    height: 2rem;
+    background-color: transparent;
+    border: 1px solid #ffffff3b;
+    border-radius: 0.6rem 0 0 0.6rem;
+    transition: all 0.3s ease;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 0.9rem;
+    letter-spacing: 0.04rem;
+    padding: 0 0.8rem;
+    outline: none;
+}
+
+.search-wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.search-button{
+    padding: 0.55rem 1rem;
+    border: none;
+    outline: none;
+    background-color: #ffffff3b;
+    border-radius: 0 0.6rem 0.6rem 0;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    &:hover{
+        background-color: #706f6f;
+        color: #dfdfdf;
+    }
+    &:disabled{
+        cursor: not-allowed;
+        background-color: #ffffff3b;
+    }
+}
+
+.clear-search-button{
+    padding: 0.55rem 1rem;
+    border: none;
+    outline: none;
+    background-color: #8c5353;
+    border-radius: 0.6rem;
+    margin-left: 1rem;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    &:hover{
+        background-color: rgb(185, 88, 88);
+        color: #dfdfdf;
+    }
+    &:disabled{
+        cursor: not-allowed;
+        background-color: #ffffff3b;
+    }
+}
+
 .code-quack-main-text-area{
     height: 9rem;
     background-color: transparent;
@@ -84,6 +142,15 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%)
+}
+
+.home-header-search{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #6665656d
 }
 
 @import "nav_bar";
